--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="file"></input>
+    <h1>Roomba</h1>
+    <button>Refresh</button>
     <script src="index.js"></script>
 </body>
 </html>
