--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="index.css"></link>
 </head>
 <body>
-    <h1>Roomba</h1>
+    <h1>Javascript Test - Roomba Roomba</h1>
+    <div id="drop-area">
+            <form class="my-form">
+              <p>Upload multiple files with the file dialog or by dragging and dropping images onto the dashed region</p>
+              <input type="file" id="fileElem">
+              <label class="button" for="fileElem">Select some files</label>
+            </form>
+          </div>
     <button>Refresh</button>
     <script src="index.js"></script>
 </body>
