--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
               <label class="button" for="fileElem">Select some files</label>
             </form>
           </div>
-    <button>Refresh</button>
+    <button>Trigger</button>
     <script src="index.js"></script>
 </body>
 </html>
